--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>site berrante</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+    <header>
     <h1>Serjão do berrante</h1>
+    </header>
+    
+    <main>
+        <p > O para bens pra vc que me fez entender   </p>
+        <hr>
+        <img src="serjão.jpg"  alt="chavão"></src>
+
+    </main>
+
+    <footer>
+        todos os direitos são da SAM
+    </footer>
     
 </body>
 </html>
